force-app/main/default/objects/Account/fields/Account_Legal_Entities_Count__c.field-meta.xml
<CustomField>
    <fullName>Account_Legal_Entities_Count__c</fullName>
    <description>Rollup Summary field of total  Account Legal Entities</description>
    <inlineHelpText>Rollup Summary field of total  Account Legal Entities</inlineHelpText>
    <label>Account Legal Entities Count</label>
    <summaryForeignKey>Account_Legal_Entity__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>