force-app/main/default/objects/Account/fields/Account_LookUp__c.field-meta.xml
<CustomField>
    <fullName>Account_LookUp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account Lookup (Not in Use).</description>
    <label>Account LookUp</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>