force-app/main/default/objects/Account/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <description>Informa Markets auto counter for Account Number.</description>
    <displayFormat>IOM-{00000}</displayFormat>
    <inlineHelpText>Informa Markets auto counter for Account Number.</inlineHelpText>
    <label>Account Number</label>
    <type>AutoNumber</type>
</CustomField>