force-app/main/default/objects/Account/fields/Account_Number_Text__c.field-meta.xml
<CustomField>
    <fullName>Account_Number_Text__c</fullName>
    <description>Used to record IM Account Number. Used to preserve Account ID’s when Salesforce Account are merged.</description>
    <inlineHelpText>Used to record IM Account Number. Used to preserve Account ID’s when Salesforce Account are merged.</inlineHelpText>
    <label>Account Number Text</label>
    <length>130</length>
    <type>Text</type>
</CustomField>