force-app/main/default/objects/Account/fields/Account_Primary_Email__c.field-meta.xml
<CustomField>
    <fullName>Account_Primary_Email__c</fullName>
    <description>Primary Email address sent to ERP.</description>
    <inlineHelpText>Primary Email address sent to ERP.</inlineHelpText>
    <label>Account Primary Email</label>
    <type>Email</type>
</CustomField>