force-app/main/default/objects/Account/fields/Accounting_Credit_Hold__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Credit_Hold__c</fullName>
    <description>Contains the status of credit hold for an account. Can be set to varying values. Should be restricted to only show for accounting and admins.</description>
    <inlineHelpText>Credit status of the account. OK - account is current, no restrictions. Warning - account has been flagged because it may be past due. Credit Hold - cannot sell to this customer without executive approval.</inlineHelpText>
    <label>Accounting Credit Hold</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OK</fullName>
                <default>true</default>
                <label>OK</label>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>