force-app/main/default/objects/Account/fields/Address_Status__c.field-meta.xml
<CustomField>
    <fullName>Address_Status__c</fullName>
    <defaultValue>&quot;Invalid&quot;</defaultValue>
    <description>Status to indicate if Address is valid against checks done by Mulesoft against LOV to ensure address is ERP compliant.</description>
    <label>Address Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Valid</fullName>
            </value>
            <value>
                <fullName>Invalid</fullName>
                <default>true</default>
                <label>Invalid</label>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>