force-app/main/default/objects/Account/fields/Address_Verified__c.field-meta.xml
<CustomField>
    <fullName>Address_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Status of the address verified check.</description>
    <label>Address Verified</label>
    <type>Checkbox</type>
</CustomField>