force-app/main/default/objects/Account/fields/Billing_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_Line_2__c</fullName>
    <description>Account&apos;s Billing address line 2 Detail.</description>
    <label>Billing Address Line 2</label>
    <type>TextArea</type>
</CustomField>