force-app/main/default/objects/Account/fields/Billing_Address_Line_3__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_Line_3__c</fullName>
    <label>Billing Address Line 3</label>
    <type>TextArea</type>
</CustomField>