force-app/main/default/objects/Account/fields/BillingCountry__c.field-meta.xml
<CustomField>
    <fullName>BillingCountry__c</fullName>
    <description>Field Created for Backup of Country Before Enabling Country/State Picklist.</description>
    <label>BillingCountry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>