force-app/main/default/objects/Account/fields/BillingState__c.field-meta.xml
<CustomField>
    <fullName>BillingState__c</fullName>
    <description>Field Created for Backup of State Before Enabling Country/State Picklist.</description>
    <label>BillingState</label>
    <length>255</length>
    <type>Text</type>
</CustomField>