force-app/main/default/objects/Account/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <description>Field to identify Branch</description>
    <label>Brand (s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Africa Health</fullName>
            </value>
            <value>
                <fullName>Arab Health</fullName>
            </value>
            <value>
                <fullName>Channel Partners</fullName>
            </value>
            <value>
                <fullName>Channel Partners Cloud Insights</fullName>
            </value>
            <value>
                <fullName>Channel Partners Conference &amp; Expo</fullName>
            </value>
            <value>
                <fullName>Channel Partners Evolution</fullName>
            </value>
            <value>
                <fullName>Channel Partners Store</fullName>
            </value>
            <value>
                <fullName>China Beauty Expo</fullName>
            </value>
            <value>
                <fullName>EndoNurse Institute</fullName>
            </value>
            <value>
                <fullName>Fispal Cafe</fullName>
            </value>
            <value>
                <fullName>Fispal Tecnologia Expo</fullName>
            </value>
            <value>
                <fullName>Greenbuild Int&apos;l Conf &amp; Expo</fullName>
            </value>
            <value>
                <fullName>Infection Control Today</fullName>
            </value>
            <value>
                <fullName>Ingredient Marketplace Global Expo&amp;Conf</fullName>
            </value>
            <value>
                <fullName>Inside Self-Storage</fullName>
            </value>
            <value>
                <fullName>Inside Self-Storage Developers Conf</fullName>
            </value>
            <value>
                <fullName>Inside Self-Storage Executive Symposium</fullName>
            </value>
            <value>
                <fullName>Inside Self-Storage Store</fullName>
            </value>
            <value>
                <fullName>Inside Self-Storage World Expo</fullName>
            </value>
            <value>
                <fullName>Interior Design Show</fullName>
            </value>
            <value>
                <fullName>National Tanning Training Institute</fullName>
            </value>
            <value>
                <fullName>Natural Products INSIDER</fullName>
            </value>
            <value>
                <fullName>Petfood 2.0 Conference &amp; Expo</fullName>
            </value>
            <value>
                <fullName>Self-Storage Talk</fullName>
            </value>
            <value>
                <fullName>Self-Storage Training Institute</fullName>
            </value>
            <value>
                <fullName>SupplySide</fullName>
            </value>
            <value>
                <fullName>SupplySide Animal Nutrition Insights</fullName>
            </value>
            <value>
                <fullName>SupplySide Beverage Insights</fullName>
            </value>
            <value>
                <fullName>SupplySide Fispal Brazil Expo</fullName>
            </value>
            <value>
                <fullName>SupplySide Health Technology Insights</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>