force-app/main/default/objects/Account/fields/CNPJ__c.field-meta.xml
<CustomField>
    <fullName>CNPJ__c</fullName>
    <description>This is a legal id number used in Brazil. Much like a social security number.</description>
    <inlineHelpText>This is a legal id number used in Brazil. Much like a social security number.</inlineHelpText>
    <label>CNPJ</label>
    <length>60</length>
    <type>Text</type>
</CustomField>