force-app/main/default/objects/Account/fields/Copy_From_Billing__c.field-meta.xml
<CustomField>
    <fullName>Copy_From_Billing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Checked Shipping address will be copied from Billing Address (Not in Use).</description>
    <label>Copy From Billing</label>
    <type>Checkbox</type>
</CustomField>