force-app/main/default/objects/Account/fields/Copy_From_Shipping__c.field-meta.xml
<CustomField>
    <fullName>Copy_From_Shipping__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Checked Billing address will be copied from Shipping Address (Not in Use).</description>
    <label>Copy From Shipping</label>
    <type>Checkbox</type>
</CustomField>