force-app/main/default/objects/Account/fields/Count_of_Won_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Won_Opportunities__c</fullName>
    <description>How many Won Opportunities are attached to this Account?</description>
    <inlineHelpText>How many Won Opportunities are attached to this Account?</inlineHelpText>
    <label>Count of Won Opportunities</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won, Closed Booked</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>