force-app/main/default/objects/Account/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Country Name</description>
    <label>Country</label>
    <length>40</length>
    <type>Text</type>
</CustomField>