force-app/main/default/objects/Account/fields/CountryISOCode__c.field-meta.xml
<CustomField>
    <fullName>CountryISOCode__c</fullName>
    <description>Billing Country ISO Code</description>
    <formula>TEXT(BillingCountryCode)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country ISO Code</label>
    <type>Text</type>
</CustomField>