force-app/main/default/objects/Account/fields/Credit_Status__c.field-meta.xml
<CustomField>
    <fullName>Credit_Status__c</fullName>
    <description>Credit status of the account.  Green - account is current, no restrictions.  Warning - account has been flagged because it may be past due.  Credit Hold - cannot sell to this customer without executive approval.</description>
    <formula>CASE(Accounting_Credit_Hold__c,
&quot;OK&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01550000002wCfn&quot;,&quot;&quot;),
&quot;Warning&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01550000002wCfY&quot;,&quot;&quot;),
&quot;Hold&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01550000002wCfi&quot;,&quot;&quot;),
IMAGE(&quot;/servlet/servlet.FileDownload?file=01550000002wCfn&quot;,&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Status</label>
    <type>Text</type>
</CustomField>