force-app/main/default/objects/Account/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <description>Customer Account Type</description>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Business</fullName>
                <default>true</default>
                <label>Business</label>
            </value>
            <value>
                <fullName>Customer</fullName>
                <isActive>false</isActive>
                <label>Customer</label>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>