force-app/main/default/objects/Account/fields/ERP_Sync__c.field-meta.xml
<CustomField>
    <fullName>ERP_Sync__c</fullName>
    <description>This flag is used by Mulesoft to understand if this Account is needs to be synced to the ERP.</description>
    <inlineHelpText>This flag is used by Mulesoft to understand if this Account is needs to be synced to the ERP.</inlineHelpText>
    <label>ERP Sync</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting Update</fullName>
            </value>
            <value>
                <fullName>Synced</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>