force-app/main/default/objects/Account/fields/ExtIDAcct__c.field-meta.xml
<CustomField>
    <fullName>ExtIDAcct__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>External ID</description>
    <externalId>true</externalId>
    <label>ExtIDAcct</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>