force-app/main/default/objects/Account/fields/IM_Account_No__c.field-meta.xml
<CustomField>
    <fullName>IM_Account_No__c</fullName>
    <description>Informa Markets Customer facing Account Number and will be sent to the ERP’s</description>
    <formula>IF( ISBLANK(Account_Number_Text__c) , Account_Number__c, Account_Number_Text__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Informa Markets Customer facing Account Number and will be sent to the ERP’s</inlineHelpText>
    <label>IM Account No</label>
    <type>Text</type>
</CustomField>