force-app/main/default/objects/Account/fields/IOM_Account_No__c.field-meta.xml
<CustomField>
    <fullName>IOM_Account_No__c</fullName>
    <description>IOM Account Number [Extenal Id]</description>
    <externalId>true</externalId>
    <label>IOM Account No</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>