force-app/main/default/objects/Account/fields/IOM_Accounting_Credit_Hold__c.field-meta.xml
<CustomField>
    <fullName>IOM_Accounting_Credit_Hold__c</fullName>
    <description>Accounting Credit Status</description>
    <label>Accounting Credit Hold</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OK</fullName>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>