force-app/main/default/objects/Account/fields/IOM_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>IOM_Sync_Status__c</fullName>
    <description>Sync Status of Account while sending Account to IOM From CRM.</description>
    <label>IOM Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IOM_Sync_Status</valueSetName>
    </valueSet>
</CustomField>