force-app/main/default/objects/Account/fields/Is_Billing_Country_AE__c.field-meta.xml
<CustomField>
    <fullName>Is_Billing_Country_AE__c</fullName>
    <description>Is Billing Country is UAE.</description>
    <formula>IF( NOT( ISPICKVAL( BillingCountryCode , &quot;AE&quot;) ), True, False )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Billing Country AE</label>
    <type>Checkbox</type>
</CustomField>