force-app/main/default/objects/Account/fields/Language_Preference__c.field-meta.xml
<CustomField>
    <fullName>Language_Preference__c</fullName>
    <description>Customer Communication language preference. i.e. for Contract and Invoice /Credit Note.</description>
    <label>Language Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Arabic</fullName>
            </value>
            <value>
                <fullName>Chinese</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>