force-app/main/default/objects/Account/fields/Legacy_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Account_Id__c</fullName>
    <description>18 digits Account Id of Source Org</description>
    <label>Legacy Account Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>