force-app/main/default/objects/Account/fields/Legacy_Account_Link__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Account_Link__c</fullName>
    <description>Account URL From Source System</description>
    <formula>HYPERLINK( TEXT(Legacy_CRM_Org_URL__c)+Legacy_Account_Id__c , &quot;Go to Account Detail&quot; ,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legacy Account Link</label>
    <type>Text</type>
</CustomField>