force-app/main/default/objects/Account/fields/Legacy_CRM_Org_URL__c.field-meta.xml
<CustomField>
    <fullName>Legacy_CRM_Org_URL__c</fullName>
    <description>Hidden field which will be used by Formula field Account Detail</description>
    <label>Legacy CRM Org URL</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>https://informage.lightning.force.com/</fullName>
            </value>
            <value>
                <fullName>https://ubm1.my.salesforce.com/</fullName>
            </value>
            <value>
                <fullName>https://informage--uat.lightning.force.com/</fullName>
                <isActive>false</isActive>
                <label>https://informage--uat.lightning.force.com/</label>
            </value>
            <value>
                <fullName>https://ubm1--full.my.salesforce.com/</fullName>
                <isActive>false</isActive>
                <label>https://ubm1--full.my.salesforce.com/</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>