force-app/main/default/objects/Account/fields/Linkedin__c.field-meta.xml
<CustomField>
    <fullName>Linkedin__c</fullName>
    <description>Linkedin URL of Company</description>
    <label>Linkedin</label>
    <type>Url</type>
</CustomField>