force-app/main/default/objects/Account/fields/MDM_ID__c.field-meta.xml
<CustomField>
    <fullName>MDM_ID__c</fullName>
    <description>MDM Id of Account.</description>
    <label>MDM ID</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>