force-app/main/default/objects/Account/fields/Network__c.field-meta.xml
<CustomField>
    <fullName>Network__c</fullName>
    <description>Shows Account belongs to which business unit of Informa.</description>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CANADA</fullName>
            </value>
            <value>
                <fullName>DUBAI</fullName>
            </value>
            <value>
                <fullName>GHNN</fullName>
            </value>
            <value>
                <fullName>ICRE</fullName>
            </value>
            <value>
                <fullName>UK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>