force-app/main/default/objects/Account/fields/Nome_Fantasia__c.field-meta.xml
<CustomField>
    <fullName>Nome_Fantasia__c</fullName>
    <description>BRAZILIAN FIELD ONLY</description>
    <inlineHelpText>This field is used for Brazil to register &quot;Accounts Nick Names&quot;</inlineHelpText>
    <label>Nome Fantasia</label>
    <length>40</length>
    <type>Text</type>
</CustomField>