force-app/main/default/objects/Account/fields/One_Invoice_Per_Contract__c.field-meta.xml
<CustomField>
    <fullName>One_Invoice_Per_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It will control the creation of single Invoice created on opportunity.</description>
    <inlineHelpText>It will control the creation of single Invoice created on opportunity.</inlineHelpText>
    <label>One Invoice Per Contract</label>
    <type>Checkbox</type>
</CustomField>