force-app/main/default/objects/Account/fields/Oracle_Number__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Number__c</fullName>
    <description>Oracle Account Number.</description>
    <inlineHelpText>Oracle Account Number.</inlineHelpText>
    <label>Oracle Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>