force-app/main/default/objects/Account/fields/Oracle_Tax_Id__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Tax_Id__c</fullName>
    <description>Account Tax Id in Oracle.</description>
    <label>Oracle Tax Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>