force-app/main/default/objects/Account/fields/Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term__c</fullName>
    <description>Payment term for Account.</description>
    <label>Payment Term</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Due on Receipt</fullName>
            </value>
            <value>
                <fullName>Net 15</fullName>
            </value>
            <value>
                <fullName>Net 30</fullName>
            </value>
            <value>
                <fullName>Net 45</fullName>
            </value>
            <value>
                <fullName>Net 60</fullName>
            </value>
            <value>
                <fullName>Net 90</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>