force-app/main/default/objects/Account/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <formula>IF(FIND(  TEXT(BillingCountryCode) , $CustomMetadata.Global_Constant__mdt.CountriesCodeEU.Value__c ) &gt; 0,&quot;EU&quot;, &quot;ROW&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Region</label>
    <type>Text</type>
</CustomField>