force-app/main/default/objects/Account/fields/SAP_Number__c.field-meta.xml
<CustomField>
    <fullName>SAP_Number__c</fullName>
    <description>SAP Unique Number.</description>
    <inlineHelpText>SAP Unique Number.</inlineHelpText>
    <label>SAP Number</label>
    <length>150</length>
    <type>Text</type>
</CustomField>