force-app/main/default/objects/Account/fields/ShippingCountry__c.field-meta.xml
<CustomField>
    <fullName>ShippingCountry__c</fullName>
    <description>Field Created for Backup of Country Before Enabling Country/State Picklist.</description>
    <label>ShippingCountry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>