force-app/main/default/objects/Account/fields/ShippingState__c.field-meta.xml
<CustomField>
    <fullName>ShippingState__c</fullName>
    <description>Field Created for Backup of State Before Enabling Country/State Picklist.</description>
    <label>ShippingState</label>
    <length>255</length>
    <type>Text</type>
</CustomField>