force-app/main/default/objects/Account/fields/Simples_Nacional__c.field-meta.xml
<CustomField>
    <fullName>Simples_Nacional__c</fullName>
    <description>O Simples Nacional é um regime tributário diferenciado que contempla empresas com receita bruta anual de até R$ 3,6 milhões - limite que será de R$ 4,8 milhões em 2018.</description>
    <inlineHelpText>O Simples Nacional é um regime tributário diferenciado que contempla empresas com receita bruta anual de até R$ 3,6 milhões - limite que será de R$ 4,8 milhões em 2018.</inlineHelpText>
    <label>Simples Nacional</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>