force-app/main/default/objects/Account/fields/Source_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Account_Id__c</fullName>
    <description>Account id in source CRM system.</description>
    <label>Source Account Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>