force-app/main/default/objects/Account/fields/Source_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Source_Account_Number__c</fullName>
    <description>Account number in source CRM system.</description>
    <externalId>true</externalId>
    <label>Source Account Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>