force-app/main/default/objects/Account/fields/Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>Tax_ID__c</fullName>
    <description>Account Tax Id in ERP(SAP).</description>
    <label>Tax ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>