force-app/main/default/objects/Account/fields/Tax_Registration_Count__c.field-meta.xml
<CustomField>
    <fullName>Tax_Registration_Count__c</fullName>
    <description>This Field represents the count of valid Tax Ids from it&apos;s respective opportunities.</description>
    <inlineHelpText>This Field represents the count of valid Tax Ids from it&apos;s respective opportunities.</inlineHelpText>
    <label>Tax Registration Count</label>
    <summaryFilterItems>
        <field>Opportunity.Tax_Registration_Id__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>