force-app/main/default/objects/Account/fields/TempAccountId__c.field-meta.xml
<CustomField>
    <fullName>TempAccountId__c</fullName>
    <description>populate the Id of Temp Account obj</description>
    <label>TempAccountId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>