force-app/main/default/objects/Account/fields/Twitter__c.field-meta.xml
<CustomField>
    <fullName>Twitter__c</fullName>
    <description>Twitter URL of Company</description>
    <label>Twitter</label>
    <type>Url</type>
</CustomField>