force-app/main/default/objects/Account/listViews/MyAccounts.listView-meta.xml
<ListView>
    <fullName>MyAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Legacy_CRM_Instance__c</columns>
    <columns>Legacy_CRM_Org_URL__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Accounts</label>
</ListView>